--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mocha": "^3.2.0",
     "wdio-chromedriver-service": "^0.1.3",
     "wdio-mocha-framework": "^0.6.1",
+    "wdio-selenium-standalone-service": "0.0.10",
     "wdio-spec-reporter": "^0.1.4",
     "webdriverio": "^4.13.0",
     "webpack": "^3.8.1"
